fix: Fix select width with long options on mobile
When having a select with long options (e.g. in the collections
selector), the select was overflowing out of the screen.

--- a/src/assets/stylesheets/_forms.css
+++ b/src/assets/stylesheets/_forms.css
@@ -120,12 +120,13 @@ textarea:focus {
 }
 
 select {
-    min-width: 50%;
+    width: 100%;
     padding: var(--space-small);
 
     color: inherit;
     font-family: inherit;
     font-size: var(--size-normal);
+    text-overflow: ellipsis;
 
     background-color: var(--color-grey-1);
     border: var(--border-width) solid var(--border-color);
@@ -134,6 +135,13 @@ select {
     transition:
         background-color 0.2s ease-in-out,
         border-color 0.2s ease-in-out;
+}
+
+@media (min-width: 800px) {
+    select {
+        width: auto;
+        min-width: 50%;
+    }
 }
 
 select:not([multiple]) {
